--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-react",
+  "name": "portfolio",
   "homepage": "https:\/\/albertoscandido.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
